vllm-task/k8s/streamlit/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vllm-demo-streamlit
  namespace: vllm-demo
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          - path: /dashboard
            pathType: Prefix
            backend:
              service:
                name: vllm-demo-streamlit
                port:
                  number: 8501
